KL-181/feat: add app url